--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Trader Bot</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') | prefix_url }}">
     <style>
         .login-container {
             display: flex;
@@ -153,7 +153,7 @@
             
             <div class="demo-info">
                 <strong>Usuário de Demonstração:</strong><br>
-                E-mail: <code>wagnerlcg@gmail.com</code>
+                E-mail: <code>usuario@exemplo.com</code>
             </div>
         </div>
     </div>
