--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Trader Bot</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') | prefix_url }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <style>
         .login-container {
             display: flex;
